--- a/testpage/index.html
+++ b/testpage/index.html
@@ -9,8 +9,8 @@
 <body>
 
     <a href="/fakeid/lamp/">LAMP</a>
-    <a>MERN</a>
-    <a>MEAN</button>
+    <a href="http://localhost:3000">MERN</a>
+    <a href="http://localhost:4200">MEAN</button>
     
 </body>
 </html>
