testpage integration test and error style

--- a/testpage/index.html
+++ b/testpage/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>FakeID test page</title>
 </head>
-<body>
+<body class="testpage">
 
     <a href="/fakeid/lamp/">LAMP</a>
     <a href="http://localhost:3000">MERN</a>
