--- a/testpage/user.html
+++ b/testpage/user.html
@@ -6,41 +6,43 @@
     <link rel="stylesheet" href="style.css">
     <title>User information</title>
 </head>
-<body>
-    <h1>User Name</h1>
-    <h2 class="userType"></h2>
-    <h4>Address</h4>
-    <p class="address"></p>
-    <h4>Date of Birth</h4>
-    <p class="dateOfBirth"></p>
-    <h4>Gender</h4>
-    <p class="gender"></p>
-    <div class="employee">
-        <h4>CVR</h4>
-        <p class="cvr"></p>
-        <h4>Company Name</h4>
-        <p class="companyName"></p>
+<body class="userPage">
+    <div>
+        <h1>User Name</h1>
+        <h2 class="userType"></h2>
+        <h4>Address</h4>
+        <p class="address"></p>
+        <h4>Date of Birth</h4>
+        <p class="dateOfBirth"></p>
+        <h4>Gender</h4>
+        <p class="gender"></p>
+        <div class="employee">
+            <h4>CVR</h4>
+            <p class="cvr"></p>
+            <h4>Company Name</h4>
+            <p class="companyName"></p>
+        </div>
+        <div class="notEmployee">
+            <div class="maritalStatus">
+                <h4>Marital status</h4>
+                <p></p>
+            </div>
+            <div class="spouse">
+                <h4>Spouse</h4>
+                <p></p>
+            </div>
+            <div class="children">
+                <h4>Children</h4>
+                <div class="childrenWrapper"></div>
+            </div>
+            <div class="parents">
+                <h4>Parents</h4>
+                <div class="parentsWrapper"></div>
+            </div>
+        </div>
     </div>
-    <div class="notEmployee">
-        <div class="maritalStatus">
-            <h4>Marital status</h4>
-            <p></p>
-        </div>
-        <div class="spouse">
-            <h4>Spouse</h4>
-            <p></p>
-        </div>
-        <div class="children">
-            <h4>Children</h4>
-            <div class="childrenWrapper"></div>
-        </div>
-        <div class="parents">
-            <h4>Parents</h4>
-            <div class="parentsWrapper"></div>
-        </div>
-    </div>
-
-
+    <a href="index.php">Return to test page</a>
+    
     <script src="script.js"></script>
 </body>
 </html>
